--- a/UDHRTopicModeling.ipynb
+++ b/UDHRTopicModeling.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPds0k/qwZdF7XRzLANmJG7",
+      "authorship_tag": "ABX9TyMw42iayGhj/gK5VbCnuobr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,11 +29,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "5FTQSuhwgi1w",
         "outputId": "59daa0a3-2a83-40d6-de17-40d84af0e2d1"
@@ -66,7 +65,7 @@
       "metadata": {
         "id": "OHipoMV-gmRt"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,8 +76,31 @@
       "metadata": {
         "id": "ZqdwvXuRhyhA"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(doc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iMls_LmUrAbu",
+        "outputId": "3d11d607-6aea-40cc-f2c0-db236016b8b5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Document('/content/UDHR_Igbo.pdf')\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -91,7 +113,7 @@
       "metadata": {
         "id": "yf15iOIXh6W9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,13 +123,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "1hE_kDMQiIFJ",
         "outputId": "e3fbc8da-2833-4965-a0fc-18b749db87c4"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,7 +151,7 @@
       "metadata": {
         "id": "QKm4ixCli2XV"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +162,7 @@
       "metadata": {
         "id": "DofHbtjujFlt"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +173,7 @@
       "metadata": {
         "id": "6hNQjPqIjY24"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -162,13 +183,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "sHDYt-7XjsCY",
-        "outputId": "99195bfd-7aee-4eb1-f1d3-7fd9fd25fdad"
+        "outputId": "81b4ef3e-75ed-4443-a206-141d275800c1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -191,7 +211,7 @@
       "metadata": {
         "id": "XzyZXSyvkDR6"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +223,7 @@
       "metadata": {
         "id": "HNQy7aIQkJ5R"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,13 +233,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "uyuXuKpAkVYT",
-        "outputId": "969e59bd-ff81-4359-ce96-baafbe183562"
+        "outputId": "0ad2d6f7-396d-4250-edcb-9130feac386f"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -238,13 +257,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "JfvaczTcky2P",
-        "outputId": "a0674d29-a455-4cf6-f60f-a7ce37d12eb9"
+        "outputId": "c15960a5-3d10-4c87-aa8b-92d9aa4c3c8d"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,13 +282,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "njJcgw8xk7E6",
-        "outputId": "09c855b1-9551-4655-8f43-1025c95277ac"
+        "outputId": "f1b0b719-fede-4e9d-e36b-fa6b11c714ed"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,6 +307,26 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from gensim.models import CoherenceModel"
+      ],
+      "metadata": {
+        "id": "mseWq0Sen13h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "n4Q7INtspUT_"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
